# pypi-test-pkg

./: .gitignore  Makefile  README.md  pyproject.toml
.claude/hooks/: record-requirement.sh
audits/: requirements_records_202602.md
docs/: makefile-targets-2026-02-08.md  pypi-api-curl-reference-2026-02-08.md  pypi-version-mechanism-2026-02-08.md  pypi-version-rollback-2026-02-08.md
scripts/: bump_version.sh  check_versions.sh  publish_pypi.sh  publish_testpypi.sh
src/pypi_test_pkg/: __init__.py
tests/: test_basic.py
