[project]
name = "pypi-test-pkg-jssfy"
version = "0.0.1"
description = "A test package for PyPI publishing workflow testing"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Example Author", email = "309228933@qq.com"}
]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pypi_test_pkg"]
